compiler-core/src/parse/snapshots/gleam_core__parse__tests__wrong_function_return_type_declaration_using_colon_instead_of_right_arrow.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2025
expression: "\npub fn main(): Nil {}\n        "
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(): Nil {}
        

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:14
  │
2 │ pub fn main(): Nil {}
  │              ^ I was not expecting this

Found `:`, expected one of: 
- `->`
Hint: Return type annotations are written using `->`, not `:`
